<resources>
    <string name="app_name">DnD Tracker</string>
    <string name="tab_text1">Dice Roll</string>
    <string name="tab_text2">Players</string>
    <string name="tab_text3">Monsters</string>
    <string name="tab_text4">GM</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment1">Hello blank fragment1</string>
    <string name="hello_blank_fragment2">Hello blank fragment2</string>
    <string name="hello_blank_fragment3">Hello blank fragment3</string>
    <string name="hello_blank_fragment4">Hello blank fragment4</string>

    <string name="dice_button1">Roll Dice</string>
    <string name="addplayer_button">Add Player</string>


    <string name="how_many">How many?</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string-array name="players">
        <item>
            
        </item>
    </string-array>



</resources>
