<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tablayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <com.google.android.material.tabs.TabItem
            android:id="@+id/Tab1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tab_text1"
            />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/Tab2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tab_text2"
            />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/Tab3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tab_text3"
            />
        <com.google.android.material.tabs.TabItem
            android:id="@+id/Tab4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tab_text4"
            />
        >

    </com.google.android.material.tabs.TabLayout>
    
    <androidx.viewpager.widget.ViewPager
        android:id="@+id/viewpager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

    </androidx.viewpager.widget.ViewPager>

</LinearLayout>